[gd_scene load_steps=7 format=2]

[ext_resource path="res://GFX/PNG/Tiles/tile_537.png" type="Texture" id=1]
[ext_resource path="res://Computers/Computer.gd" type="Script" id=2]
[ext_resource path="res://Interfaces/ComputerPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://GFX/PNG/Tiles/tile_519.png" type="Texture" id=4]
[ext_resource path="res://Interfaces/UI_Theme.tres" type="Theme" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 58, 32 )

[node name="Computer" type="Area2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 40, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ComputerPopup" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 32, 0 )
rotation = 1.5708
enabled = false
texture = ExtResource( 4 )

[node name="LockGroup" type="Label" parent="." groups=["labels"]]
visible = false
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 5 )
text = "Test"

[connection signal="body_entered" from="." to="." method="_on_Computer_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Computer_body_exited"]
[connection signal="input_event" from="." to="." method="_on_Computer_input_event"]
